tests/fixtures/invalid/bytes_ge_list.py
# Cannot compare with >= Bytes and List[int]
x: bool = b"hello" >= [1, 2, 3]
